fix(navigation-primary): visibly hide details contents for cmd/ctrl + f (#2675)
* fix(navigation-primary): visibily hide content from cmd+f unless dropdown/hamburger is open

* chore(navigation-primary): add changeset

--- a/elements/rh-navigation-primary/rh-navigation-primary.css
+++ b/elements/rh-navigation-primary/rh-navigation-primary.css
@@ -238,6 +238,13 @@
   & #details-content {
     display: none;
   }
+
+  &:not([open]) {
+    & #details-content {
+      /* ensures the content is not visible to cmd+f unless the details are open */
+      visibility: hidden;
+    }
+  }
 }
 
 #secondary {
